Split liner